conexion base de datos y factory y data completos